--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   web:
     image: mongo_ui:v1.0
     restart: always
+    network_mode: bridge
     container_name: mongo_ui_v1.0
     ports:
       - 18080:18080
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
-      # - /etc/timezone:/etc/timezone:ro
-      # - /etc/hosts:/etc/hosts:ro
-      # - /etc/nsswitch.conf:/etc/nsswitch.conf:ro
+#    volumes:
+#      - /etc/localtime:/etc/localtime:ro
+#      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
+#      - /etc/timezone:/etc/timezone:ro
+#      - /etc/hosts:/etc/hosts:ro
+#      - /etc/nsswitch.conf:/etc/nsswitch.conf:ro
